feat: get all batches api implemented

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   dio: ^5.4.1
   dio_smart_retry: ^7.0.1
   connectivity_plus: ^7.0.0
+  pretty_dio_logger: ^1.4.0
 
   # Authentication
   flutter_secure_storage: ^10.0.0
