--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   permission_handler: ^12.0.1
   equatable: ^2.0.7
   dartz: ^0.10.1
+  flutter_launcher_icons: ^0.14.4
 
 dev_dependencies:
   flutter_test:
@@ -106,3 +107,10 @@ flutter:
     - assets/icons/
     - assets/images/
     - assets/svg/
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: "AppIcon"
+  image_path: "assets/icons/google_logo.png"
+  min_sdk_android: 21
+  remove_alpha_ios: true
